fix full screen on mobile, width for pc

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,4 +2,5 @@
   margin: 0 auto;
   background: black;
   color: white;
+  height: 100%;
 }
