--- a/src/components/Grid/styles.module.scss
+++ b/src/components/Grid/styles.module.scss
@@ -3,6 +3,8 @@
   height: 100%;
   justify-content: center;
   align-items: flex-end;
+  max-width: 500px;
+  margin: 0 auto;
 }
 .grid {
   height: 100%;
