--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,7 @@ h5,
 h6 {
   overflow-wrap: break-word;
 }
+
+#root {
+  height: 100%;
+}
